Delete actual plugin files inside dist/ and add to .gitignore for all relevant entries. (Fear not, it's all saved locally.)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 /*.bak
+/dist/Main Files/Compat Grabbag/PRP-Compat-Clarity-43.esp
+/dist/Main Files/Compat Grabbag/PRP-Compat-DCA.esp
+/dist/Main Files/Compat Grabbag/PRP-Compat-Fogout-Int.esp
+/dist/Main Files/Compat Grabbag/PRP-Compat-IntEnh.esp
+/dist/Main Files/Compat Grabbag/PRP-Compat-RegionNames.esp
+/dist/Main Files/Compat Grabbag/PRP-Compat-UEL.esp
+/dist/Main Files/Compat Grabbag/PRP-Compat-UIL.esp
+/dist/Main Files/Compat Grabbag/PRP-Compat-UIL-Darker.esp
+/dist/Main Files/Compat Grabbag/PRP-Compat-Clarity-42.esp
+/dist/Main Files/Plugins/PRP.esp
+/dist/Main Files/Plugins/PPF.esm
+/dist/Main Files/Support Files/PRP - Main.ba2
+/dist/Main Files/Support Files/PRP.cdx
+/dist/Main Files/Support Files/PPF - Main.ba2
+/dist/Main Files/Support Files/PRP - Geometry.csg
+/dist/Main Files/Extra/WIPAG_ECO_Patch.esp
+/dist/Main Files/Extra/AlootHomePlate - Geometry.csg
+/dist/Main Files/Extra/AlootHomePlate - Main.ba2
+/dist/Main Files/Extra/AlootHomePlate.cdx
+/dist/Main Files/Extra/AlootHomePlate.esp
+/dist/Main Files/Extra/ColterFix - Main.ba2
+/dist/Main Files/Extra/ColterFix.esp
