Update .gitignore and customize fomod further.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 /dist/Main Files/Extra/AlootHomePlate.esp
 /dist/Main Files/Extra/ColterFix - Main.ba2
 /dist/Main Files/Extra/ColterFix.esp
+/dist/Main Files/Pack Fixes/PPF - Main.ba2
+/dist/Main Files/Pack Fixes/PPF.esm
+/dist/Main Files/Repair Pack/PRP - Geometry.csg
+/dist/Main Files/Repair Pack/PRP - Main.ba2
+/dist/Main Files/Repair Pack/PRP.cdx
+/dist/Main Files/Repair Pack/PRP.esp
+/dist/*.7z
