Redo .gitignore and create dist-patch

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,8 @@
-/*.bak
-/dist/Main Files/Compat Grabbag/PRP-Compat-Clarity-43.esp
-/dist/Main Files/Compat Grabbag/PRP-Compat-DCA.esp
-/dist/Main Files/Compat Grabbag/PRP-Compat-Fogout-Int.esp
-/dist/Main Files/Compat Grabbag/PRP-Compat-IntEnh.esp
-/dist/Main Files/Compat Grabbag/PRP-Compat-RegionNames.esp
-/dist/Main Files/Compat Grabbag/PRP-Compat-UEL.esp
-/dist/Main Files/Compat Grabbag/PRP-Compat-UIL.esp
-/dist/Main Files/Compat Grabbag/PRP-Compat-UIL-Darker.esp
-/dist/Main Files/Compat Grabbag/PRP-Compat-Clarity-42.esp
-/dist/Main Files/Extra/WIPAG_ECO_Patch.esp
-/dist/Main Files/Extra/AlootHomePlate - Geometry.csg
-/dist/Main Files/Extra/AlootHomePlate - Main.ba2
-/dist/Main Files/Extra/AlootHomePlate.cdx
-/dist/Main Files/Extra/AlootHomePlate.esp
-/dist/Main Files/Extra/ColterFix - Main.ba2
-/dist/Main Files/Extra/ColterFix.esp
-/dist/Main Files/Pack Fixes/PPF - Main.ba2
+*.bak
+*.7z
+*.esp
+*.ba2
+*.csg
+*.cdx
+/dist-patch/Main Files/Pack Fixes/PPF.esm
 /dist/Main Files/Pack Fixes/PPF.esm
-/dist/Main Files/Repair Pack/PRP - Geometry.csg
-/dist/Main Files/Repair Pack/PRP - Main.ba2
-/dist/Main Files/Repair Pack/PRP.cdx
-/dist/Main Files/Repair Pack/PRP.esp
-/dist/*.7z
