Revise dist-patch to meet part of current requirements. Probably needs a bit more work.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /dist/Main Files/English
 /dist/Main Files/Spanish
 /dist/Main Files/Italian
+/dist-patch/Main Files/English
+/dist-patch/Main Files/Italian
+/dist-patch/Main Files/Spanish
