update dist-patch to match.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.ba2
 *.csg
 *.cdx
-/dist/Main Files
-/dist-patch-53/Main Files
-/dist-patch-57/Main Files
+02 Universal
+01 English
+01 Italian
+01 Spanish
